--- a/po/fr.po
+++ b/po/fr.po
@@ -1,24 +1,24 @@
-# French translation for the Forecasts module.
+# French translation for the Drawer module.
 # This file is put in the public domain.
 #
 # batden <batden@orange.fr>, 2009.
+# similar <similar@orange.fr>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2025-01-15 21:26+0100\n"
-"PO-Revision-Date: 2010-07-10 12:52+0400\n"
-"Last-Translator: batden <batden@orange.fr>\n"
+"PO-Revision-Date: 2025-01-25 18:53+0100\n"
+"Last-Translator: Philippe Jean Guillaumie <similar@orange.fr>\n"
 "Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: French\n"
-"X-Poedit-Country: FRANCE\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"X-Generator: Poedit 3.5\n"
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
@@ -54,7 +54,7 @@ msgstr "Paramètres de l'affichage"
 
 #: src/e_mod_config.c:300
 msgid "Moksha theme"
-msgstr ""
+msgstr "Thème de Moksha"
 
 #: src/e_mod_main.c:215
 msgid ""
@@ -86,7 +86,7 @@ msgstr ""
 "version<br>actuelle du module. C'est vraiment étonnant. Cela ne devrait pas "
 "se produire, à moins<br>que vous n'ayez installé une version antérieure ou "
 "copié la configuration du module<br>depuis une machine sur laquelle une "
-"version plus récente était en cours. Ce n'est<br>pas bon et, par mesure de "
+"version plus récente était en cours. Ce n'est<br>pas sain et, par mesure de "
 "précaution, les valeurs par défaut de votre configuration<br>ont été "
 "restaurées.<br>Désolé pour le désagrément.<br>"
 
@@ -156,7 +156,7 @@ msgstr "Greffon de Tiroir : surveillance de dossier"
 
 #: src/plugins/sources/directory_watcher.c:505
 msgid "Watch path"
-msgstr "Chemin "
+msgstr "Chemin"
 
 #: src/plugins/sources/directory_watcher.c:511
 msgid "Custom file manager"
@@ -188,7 +188,7 @@ msgstr "Trier par dernier changement"
 
 #: src/plugins/sources/directory_watcher.c:530
 msgid "Sort by size"
-msgstr "Trier par la taille"
+msgstr "Trier par taille"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
