--- a/po/pt.po
+++ b/po/pt.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-02-02 06:18-0500\n"
-"PO-Revision-Date: 2025-01-20 15:55+0000\n"
+"PO-Revision-Date: 2025-02-02 20:22+0000\n"
 "Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
 "Language-Team: Portuguese\n"
 "Language: pt\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
@@ -152,7 +152,7 @@ msgstr "Diretório (%s)"
 
 #: src/plugins/sources/directory_watcher.c:466
 msgid "Drawer Plugin : Directory Watcher"
-msgstr "Plugin Gaveta: Monitorizador de diretórios"
+msgstr "Plugin Gaveta : Monitorizador de diretórios"
 
 #: src/plugins/sources/directory_watcher.c:507
 msgid "Watch path"
@@ -191,9 +191,8 @@ msgid "Sort by size"
 msgstr "Ordenar por tamanho"
 
 #: src/plugins/sources/history.c:179
-#, fuzzy
 msgid "History settings"
-msgstr "Definições da lista"
+msgstr "Definições do histórico"
 
 #: src/plugins/sources/history.c:384 src/plugins/sources/launcher.c:301
 msgid "Change Item Properties"
@@ -201,51 +200,47 @@ msgstr "Alterar propriedades do item"
 
 #: src/plugins/sources/history.c:394
 msgid "Blacklist Item"
-msgstr ""
+msgstr "Item da lista negra"
 
 #: src/plugins/sources/history.c:400 src/plugins/sources/launcher.c:306
 msgid "Remove Item"
 msgstr "Remover item"
 
 #: src/plugins/sources/history.c:583
-#, fuzzy
 msgid "Drawer Plugin : History"
-msgstr "Plugin Gaveta: Lista"
+msgstr "Plugin Gaveta : Histórico"
 
 #: src/plugins/sources/history.c:630 src/plugins/sources/launcher.c:585
 msgid "Sorting options"
 msgstr "Opções de ordenação"
 
 #: src/plugins/sources/history.c:631
-#, fuzzy
 msgid "Sort applications by executable"
-msgstr "Ordenar aplicações por avaliação"
+msgstr "Ordenar aplicações por execução"
 
 #: src/plugins/sources/history.c:633
-#, fuzzy
 msgid "Sort applications by date"
-msgstr "Ordenar aplicações por avaliação"
+msgstr "Ordenar aplicações por data"
 
 #: src/plugins/sources/history.c:635
-#, fuzzy
 msgid "Sort applications by popularity"
 msgstr "Ordenar aplicações por popularidade"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
-msgstr ""
+msgstr "Lista negra"
 
 #: src/plugins/sources/history.c:639
 msgid "Enable Blacklist"
-msgstr ""
+msgstr "Ativar a lista negra"
 
 #: src/plugins/sources/history.c:644
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: src/plugins/sources/history.c:649
 msgid "Blacklisted Applications"
-msgstr ""
+msgstr "Aplicações na lista negra"
 
 #: src/plugins/sources/history.c:660 src/plugins/sources/launcher.c:571
 msgid "Add"
@@ -257,11 +252,11 @@ msgstr "Eliminar"
 
 #: src/plugins/sources/history.c:714
 msgid "Add Blacklisted Application"
-msgstr ""
+msgstr "Adicionar aplicação à lista negra"
 
 #: src/plugins/sources/history.c:715
 msgid "Enter application name"
-msgstr ""
+msgstr "Introduzir o nome da aplicação"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
@@ -274,7 +269,7 @@ msgstr "Fonte de %s"
 
 #: src/plugins/sources/launcher.c:507
 msgid "Drawer Plugin : Launcher"
-msgstr "Plugin Gaveta: Lançador"
+msgstr "Plugin Gaveta : Lançador"
 
 #: src/plugins/sources/launcher.c:563
 msgid "Selected Bar Source"
@@ -309,13 +304,11 @@ msgstr "Introduza um nome para esta nova fonte:"
 msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
-msgstr ""
-"Solicitou a eliminação de \"%s\".<br><br>Tem a certeza que pretende eliminar "
-"esta fonte?"
+msgstr "Solicitou a eliminação de \"%s\".<br><br>Pretende eliminar esta fonte?"
 
 #: src/plugins/sources/launcher.c:643
 msgid "Are you sure you want to delete this bar source?"
-msgstr "Tem a certeza que pretende eliminar esta fonte?"
+msgstr "Pretende eliminar esta fonte?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
@@ -323,7 +316,7 @@ msgstr "Definições da lista"
 
 #: src/plugins/views/list.c:778
 msgid "Drawer Plugin : List"
-msgstr "Plugin Gaveta: Lista"
+msgstr "Plugin Gaveta : Lista"
 
 #: src/plugins/views/list.c:814
 msgid "Item size options"
