--- a/po/pl.po
+++ b/po/pl.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-02-02 06:18-0500\n"
-"PO-Revision-Date: 2025-02-02 06:18-0500\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2025-02-04 14:19-0100\n"
+"Last-Translator: diekrz2\n"
 "Language-Team: none\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
@@ -20,39 +20,39 @@ msgstr ""
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
-msgstr ""
+msgstr "Moduł Drawer"
 
 #: src/e_mod_config.c:106
 msgid "Plugins selection"
-msgstr ""
+msgstr "Wybierz wtyczkę"
 
 #: src/e_mod_config.c:109
 msgid "Plugins settings"
-msgstr ""
+msgstr "Ustawienia wtyczek"
 
 #: src/e_mod_config.c:171
 msgid "Source plugins"
-msgstr ""
+msgstr "Źródła wtyczek"
 
 #: src/e_mod_config.c:197
 msgid "View plugins"
-msgstr ""
+msgstr "Zobacz wtyczki"
 
 #: src/e_mod_config.c:245 src/e_mod_config.c:266
 msgid "Description: Unavailable"
-msgstr ""
+msgstr "Opis: niedostępny"
 
 #: src/e_mod_config.c:292
 msgid "Source settings"
-msgstr ""
+msgstr "Ustawienia źródła"
 
 #: src/e_mod_config.c:297
 msgid "View settings"
-msgstr ""
+msgstr "Zobacz ustawienia"
 
 #: src/e_mod_config.c:299
 msgid "Moksha theme"
-msgstr ""
+msgstr "Motyw Moksha"
 
 #: src/e_mod_main.c:216
 msgid ""
@@ -64,6 +64,13 @@ msgid ""
 "set of defaults will fix<br>that by adding it in. You can re-configure "
 "things now to your<br>liking. Sorry for the inconvenience.<br>"
 msgstr ""
+"Dane konfiguracji modułu Drawer wymagały uaktualnienia. Twoja stara "
+"konfiguracja<br> została wyczyszczona, a nowy zestaw domyślnych ustawień został zainicjowany. "
+"To<br>będzie się zdarzać regularnie podczas rozwoju, więc nie zgłaszaj<br>błędu. "
+"Oznacza to po prostu, że moduł potrzebuje nowych danych konfiguracyjnych dla "
+"użytecznej funkcjonalności, których Twoja stara<br>konfiguracja po prostu nie posiadała. Ten nowy "
+"zestaw domyślnych ustawień<br>to naprawi. Możesz teraz ponownie skonfigurować "
+"rzeczy według własnego uznania. Przepraszamy za niedogodności.<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -73,215 +80,219 @@ msgid ""
 "module was running. This is bad and<br>as a precaution your configuration "
 "has been now restored to<br>defaults. Sorry for the inconvenience.<br>"
 msgstr ""
+"Twoja konfiguracja modułu Drawer jest NOWSZA niż wersja modułu. To jest "
+"bardzo<br>dziwne. Nie powinno się to zdarzyć, chyba że zmieniłeś<br>wersję modułu "
+"lub skopiowałeś konfigurację z miejsca, w którym<br>działała nowsza wersja modułu. "
+"To jest złe i<br>jako środek ostrożności Twoja konfiguracja "
+"została teraz przywrócona do ustawień<br>domyślnych. Przepraszamy za niedogodności.<br>"
 
 #: src/e_mod_main.c:459
 msgid "The plugin is not configurable"
-msgstr ""
+msgstr "Tej wtyczki nie można skonfigurować"
 
 #: src/e_mod_main.c:1029 src/e_mod_main.c:1037 src/e_mod_main.c:1051
 #: src/e_mod_main.c:1063 src/e_mod_main.c:1131 src/e_mod_main.c:1182
 #: src/e_mod_main.c:1228
 msgid "Drawer Plugins"
-msgstr ""
+msgstr "Wtyczki Drawer"
 
 #: src/e_mod_main.c:1030
 #, c-format
 msgid "The plugin '%s' was not found."
-msgstr ""
+msgstr "Wtyczki '%s' nie znaleziono."
 
 #: src/e_mod_main.c:1038
 #, c-format
 msgid "The plugin '%s' could not be opened."
-msgstr ""
-
+msgstr "Nie udało się otworzyć wtyczki '%s'."
 #: src/e_mod_main.c:1052 src/e_mod_main.c:1132 src/e_mod_main.c:1183
 #: src/e_mod_main.c:1229
 #, c-format
 msgid "The plugin '%s' does not contain all required functions."
-msgstr ""
+msgstr "Wtyczka '%s' nie posiada wszystkich wymaganych funkcji."
 
 #: src/e_mod_main.c:1064
 #, c-format
 msgid "The plugin '%s' does not have the required API version."
-msgstr ""
+msgstr "Wtyczka '%s' nie posiada wymaganej wersji API."
 
 #: src/e_mod_main.c:1394
 msgid "Drawer"
-msgstr ""
+msgstr "Drawer"
 
 #: src/e_mod_main.c:1487
 msgid "Drawer Configuration Updated"
-msgstr ""
+msgstr "Zaktualizowano konfigurację Drawer"
 
 #: src/e_mod_main.c:1854
 msgid "Settings"
-msgstr ""
+msgstr "Ustawienia"
 
 #: src/plugins/sources/directory_watcher.c:253
 msgid "Open Containing Directory"
-msgstr ""
+msgstr "Otwórz zawierający katalog"
 
 #: src/plugins/sources/directory_watcher.c:263
 msgid "Directory Watcher settings"
-msgstr ""
+msgstr "Ustawienia Obserwatora katalogów"
 
 #: src/plugins/sources/directory_watcher.c:317
 msgid "Home"
-msgstr ""
+msgstr "Home"
 
 #: src/plugins/sources/directory_watcher.c:380
 #, c-format
 msgid "Directory (%s)"
-msgstr ""
+msgstr "Katalog (%s)"
 
 #: src/plugins/sources/directory_watcher.c:466
 msgid "Drawer Plugin : Directory Watcher"
-msgstr ""
+msgstr "Wtyczka Drawer : Obserwator katalogów"
 
 #: src/plugins/sources/directory_watcher.c:507
 msgid "Watch path"
-msgstr ""
+msgstr "Obserwuj ścieżkę"
 
 #: src/plugins/sources/directory_watcher.c:513
 msgid "Custom file manager"
-msgstr ""
+msgstr "Niestandardowy menadżer plików"
 
 #: src/plugins/sources/directory_watcher.c:519
 msgid "Sort Options"
-msgstr ""
+msgstr "Opcje sortowania"
 
 #: src/plugins/sources/directory_watcher.c:520
 msgid "Sort directories first"
-msgstr ""
+msgstr "Sortuj foldery w pierwszej kolejności"
 
 #: src/plugins/sources/directory_watcher.c:524
 msgid "Sort by name"
-msgstr ""
+msgstr "Sortuj według nazwy"
 
 #: src/plugins/sources/directory_watcher.c:526
 msgid "Sort by access time"
-msgstr ""
+msgstr "Sortuj według czasu wstępu"
 
 #: src/plugins/sources/directory_watcher.c:528
 msgid "Sort by modification time"
-msgstr ""
+msgstr "Sortuj według czasu modyfikacji"
 
 #: src/plugins/sources/directory_watcher.c:530
 msgid "Sort by change time"
-msgstr ""
+msgstr "Sortuj według czasu zmiany"
 
 #: src/plugins/sources/directory_watcher.c:532
 msgid "Sort by size"
-msgstr ""
+msgstr "Sortuj według rozmiaru"
 
 #: src/plugins/sources/history.c:179
 msgid "History settings"
-msgstr ""
+msgstr "Ustawienia historii"
 
 #: src/plugins/sources/history.c:384 src/plugins/sources/launcher.c:301
 msgid "Change Item Properties"
-msgstr ""
+msgstr "Zmień właściwości elementu"
 
 #: src/plugins/sources/history.c:394
 msgid "Blacklist Item"
-msgstr ""
+msgstr "Dodaj element do czarnej listy"
 
 #: src/plugins/sources/history.c:400 src/plugins/sources/launcher.c:306
 msgid "Remove Item"
-msgstr ""
+msgstr "Usuń element"
 
 #: src/plugins/sources/history.c:583
 msgid "Drawer Plugin : History"
-msgstr ""
+msgstr "Wtyczka Drawer : Historia"
 
 #: src/plugins/sources/history.c:630 src/plugins/sources/launcher.c:585
 msgid "Sorting options"
-msgstr ""
+msgstr "Opcje sortowania"
 
 #: src/plugins/sources/history.c:631
 msgid "Sort applications by executable"
-msgstr ""
+msgstr "Sortuj aplikacje według pliku wykonywalnego"
 
 #: src/plugins/sources/history.c:633
 msgid "Sort applications by date"
-msgstr ""
+msgstr "Sortuj aplikacje według daty"
 
 #: src/plugins/sources/history.c:635
 msgid "Sort applications by popularity"
-msgstr ""
+msgstr "Sortuj aplikacje według popularności"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
-msgstr ""
+msgstr "Czarna lista"
 
 #: src/plugins/sources/history.c:639
 msgid "Enable Blacklist"
-msgstr ""
+msgstr "Włącz czarną listę"
 
 #: src/plugins/sources/history.c:644
 msgid "General"
-msgstr ""
+msgstr "Ogólne"
 
 #: src/plugins/sources/history.c:649
 msgid "Blacklisted Applications"
-msgstr ""
+msgstr "Aplikacje na czarnej liście"
 
 #: src/plugins/sources/history.c:660 src/plugins/sources/launcher.c:571
 msgid "Add"
-msgstr ""
+msgstr "Dodaj"
 
 #: src/plugins/sources/history.c:663 src/plugins/sources/launcher.c:573
 msgid "Delete"
-msgstr ""
+msgstr "Usuń"
 
 #: src/plugins/sources/history.c:714
 msgid "Add Blacklisted Application"
-msgstr ""
+msgstr "Dodaj aplikacje do czarnej listy"
 
 #: src/plugins/sources/history.c:715
 msgid "Enter application name"
-msgstr ""
+msgstr "Wpisz nazwę aplikacji"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
-msgstr ""
+msgstr "Ustawienia launchera"
 
 #: src/plugins/sources/launcher.c:327
 #, c-format
 msgid "%s source"
-msgstr ""
+msgstr "źródło %s"
 
 #: src/plugins/sources/launcher.c:507
 msgid "Drawer Plugin : Launcher"
-msgstr ""
+msgstr "Wtyczka Drawer : Launcher"
 
 #: src/plugins/sources/launcher.c:563
 msgid "Selected Bar Source"
-msgstr ""
+msgstr "Wybrane źródło paska"
 
 #: src/plugins/sources/launcher.c:575
 msgid "Configure"
-msgstr ""
+msgstr "Ustaw"
 
 #: src/plugins/sources/launcher.c:586
 msgid "Unsorted"
-msgstr ""
+msgstr "Niesortowane"
 
 #: src/plugins/sources/launcher.c:588
 msgid "Sort applications by local rating"
-msgstr ""
+msgstr "Sortuj aplikacje według oceny lokalnej"
 
 #: src/plugins/sources/launcher.c:590
 msgid "Sort applications by overall popularity"
-msgstr ""
+msgstr "Sortuj aplikacje według ogólnej popularności"
 
 #: src/plugins/sources/launcher.c:625
 msgid "Create new Launcher source"
-msgstr ""
+msgstr "Utwórz nowe źródło Launchera"
 
 #: src/plugins/sources/launcher.c:626
 msgid "Enter a name for this new source:"
-msgstr ""
+msgstr "Wpisz nazwę dla nowego źródła:"
 
 #: src/plugins/sources/launcher.c:639
 #, c-format
@@ -289,31 +300,32 @@ msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
 msgstr ""
+"Poprosiłeś o usunięcie \"%s\".<br><br>Czy na pewno chcesz usunąć to źródło paska?"
 
 #: src/plugins/sources/launcher.c:643
 msgid "Are you sure you want to delete this bar source?"
-msgstr ""
+msgstr "Czy na pewno chcesz usunąć to źródło paska?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
-msgstr ""
+msgstr "Ustawienia Listy"
 
 #: src/plugins/views/list.c:778
 msgid "Drawer Plugin : List"
-msgstr ""
+msgstr "Wtyczka Plugin : Lista"
 
 #: src/plugins/views/list.c:814
 msgid "Item size options"
-msgstr ""
+msgstr "Opcje rozmiaru elementów"
 
 #: src/plugins/views/list.c:815
 msgid "Large"
-msgstr ""
+msgstr "Duże"
 
 #: src/plugins/views/list.c:817
 msgid "Medium"
-msgstr ""
+msgstr "Średnie"
 
 #: src/plugins/views/list.c:819
 msgid "Small"
-msgstr ""
+msgstr "Małe"
